--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "ejs": "^3.1.9",
     "es6": "^0.0.7",
     "express": "^4.18.3",
+    "express-session": "^1.18.0",
     "joi": "^17.12.2",
     "method-override": "^3.0.0",
     "mongoose": "^8.2.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "validator": "^13.11.0"
   }
 }
