--- a/netlify.toml
+++ b/netlify.toml
@@ -1,11 +1,11 @@
 [build]
   command = "npm install" # The build command, which installs your dependencies
-  functions = "/" # The directory for serverless functions
+  functions = "functions" # The directory for serverless functions
   publish = "public"
   node_version = "16"
 
 [[redirects]]
   from = "/*"
-  to = "/.netlify/index.mjs"
+  to = "/.netlify/functions/index.mjs"
   status = 200
 
