--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "yelpcamp",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.mjs",
   "type": "module",
   "scripts": {
     "start": "node index.mjs",
@@ -15,8 +15,9 @@
     "connect-flash": "^0.1.1",
     "connect-mongo": "^5.1.0",
     "dotenv": "^16.4.5",
-    "ejs": "^3.1.9",
+    "ejs": "^3.1.10",
     "es6": "^0.0.7",
+    "eslint": "^9.15.0",
     "express": "^4.18.3",
     "express-mongo-sanitize": "^2.2.0",
     "express-session": "^1.18.0",
@@ -31,7 +32,6 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0",
     "path": "^0.12.7",
-    "serverless-http": "^3.2.0",
     "validator": "^13.11.0"
   }
 }
